added multilingual support for practice and migrated to es modules

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tictactoe",
   "version": "1.0.0",
+  "type": "module",
   "description": "krizci in krozci",
   "main": "server.js",
   "scripts": {
